2021-03-18 11:16  claudio

	* lib/libc/stdlib/recallocarray.c: Type-cast getpagesize() from int
	  to size_t for the comparison with d.	getpagesize() will only
	  return positive numbers (there is no negative page size system)
	  and it can not fail.	Should fix some compiler warnings seen in
	  -portable projects.  OK otto@

2021-01-06 19:54  otto

	* lib/libc/asr/asr.c: Fix two issues related to thread private data
	  in asr.  - setting up asr in single thread mode and then starting
	  threads using asr   would lead to multiple threads sharing the
	  same resolver.  - destruction of a thread that has been using asr
	  would leak data.  Problem originally reported by Alexey Sokolov
	  and Uli Schlachter.  ok kettenis@

2020-12-17 14:54  bluhm

	* share/mk/bsd.regress.mk: Run setup_once targets in a sepearate
	  block with headline before all other targets.  OK tb@

2020-12-16 16:53  bluhm

	* share/mk/bsd.regress.mk: When debugging tests, it is useful to
	  see the target name and which output belongs to it.  Echo
	  headline with regress target and empty line afterwards.  OK
	  sthen@ tb@ OK claudio@

2020-07-06 13:33  pirofti

	* lib/libc/asr/asr.c: Add support for timeconting in userland.

	  This diff exposes parts of clock_gettime(2) and gettimeofday(2)
	  to userland via libc eliberating processes from the need for a
	  context switch everytime they want to count the passage of time.

	  If a timecounter clock can be exposed to userland than it needs
	  to set its tc_user member to a non-zero value. Tested with one or
	  multiple counters per architecture.

	  The timing data is shared through a pointer found in the new ELF
	  auxiliary vector AUX_openbsd_timekeep containing timehands
	  information that is frequently updated by the kernel.

	  Timing differences between the last kernel update and the current
	  time are adjusted in userland by the tc_get_timecount() function
	  inside the MD usertc.c file.
